objects/Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns on Debug Logging</description>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Validation_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Config</label>
    <pluralLabel>Configs</pluralLabel>
</CustomObject>